# Blog-docker-mongo

./: .gitignore  README.md  main_mongo.py  pyproject.toml
