[tool.poetry]
name = "docker-mongo"
version = "0.1.0"
description = ""
authors = ["Joichiro433 <joichiro322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
